--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,19 @@ canvas {
   transition: .8s;
   
 }
+.events{
+  display: inline-block;
+  height: 50px;
+  border-bottom: 2px solid lightgray;
+  padding: 10px 10px;
+  width: 90%;
+  transition: .8s;
+}
+.events:hover{
+  box-shadow: 0px 2px 10px black;
+  background-color:  #16a085;
+  color: #fff;
+}
 .items:hover{  box-shadow: 1px 3px 6px black; }
 
 .btn-red{
