--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,7 @@ canvas {
   cursor: pointer;
 }
 .events:hover{
-  box-shadow: 0px 2px 10px black;
   background-color:  #d02532;
-  border-bottom: 0;
   color: #fff;
 }
 .items:hover{  box-shadow: 1px 3px 6px black; transition: scale(2.0,2.0);}
@@ -144,7 +142,69 @@ footer{
   color: white;
   opacity: .7;
 }
+#bug:hover .fa-bug{
+  animation-name: animateIcon;
+  animation-duration:2s; 
+}
+#coding:hover .fa-code{
+  animation-name: animateIcon;
+  animation-duration:2s; 
+}
+#biz:hover .fa-bitbucket-square{
+  animation-name: animateIcon;
+  animation-duration:2s; 
+}
+@keyframes animateIcon{
+  from{color:black;transform: rotate(0deg);}
+  to{color: red;transform: rotate(360deg);}
+}
+
 @media only screen and (max-width: 700px){
   #d0 { margin-left: 0;  width: 95%; }
   .items{ transition: 0s; width: 80%; }
 }
+/** Code added by gunjan **/
+
+
+.flat-button{
+  width:4vw;
+  height: 4vw;
+  content: " ";
+  background-color: #00ccff;
+  margin:2% 2% 2% 2%;
+  border-radius: 5px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer; /** added by arpanpathak **/
+  box-shadow: 1px 2px 5px 1px black;
+  line-height: 4vw;
+  display: inline-block;
+  transition: .8s;
+}
+/** code added by arpanpathak **/
+.flat-button:hover { background-color: #236978; color: #fff; font-size: 35px; }
+/** end of section **/
+#sidebar{
+  width: 23%;
+  position: relative;
+  float: left;
+  height: 87vh;
+  background-color: #262626;
+  vertical-align: middle;
+  
+
+}
+.question-view{
+  align-content: center;
+  text-align: center;
+  width: 65%;
+  margin-left:25%;
+  height: inherit;
+  margin-top: 6%;
+}
+.option{
+  align-content: center;
+  margin-left: 50%;
+  font-size: 20px;
+}
+/** end of section **/
