--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,21 @@ canvas {
   cursor: pointer;
 }
 .btn-red:hover { background-color: black;  }
-
+/* added by arpanpathak **/
+.flat-btn-move{
+  margin-top: 3px;
+  background-color:  #f8233a ;
+  padding-left: 30px; padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  border: 0px ; border-radius: 0px;
+  box-shadow: 0px 1px 5px black;
+  transition: .6s;
+  cursor: pointer;
+}
+.later{ background-color: #4f74fb; float: right;}
+/* end */
 .btn-green{
   margin-top: 3px;
   background-color:  #16a085 ;
@@ -154,6 +168,9 @@ footer{
   animation-name: animateIcon;
   animation-duration:2s; 
 }
+.ques-no { font-size: 38px; text-shadow: 1px 2px 2px black; 
+  position: absolute; top: 3px; left: 3px; }
+.timer_container { position: absolute; bottom: 5px; right: 5px; }
 @keyframes animateIcon{
   from{color:black;transform: rotate(0deg);}
   to{color: red;transform: rotate(360deg);}
@@ -170,7 +187,7 @@ footer{
   width:4vw;
   height: 4vw;
   content: " ";
-  background-color: #00ccff;
+  background-color: #fff;
   margin:2% 2% 2% 2%;
   border-radius: 5px;
   text-align: center;
@@ -192,9 +209,11 @@ footer{
   background-color: #262626;
   vertical-align: middle;
   
-
 }
 .question-view{
+  position: relative;
+  padding: 10px 10px;
+  box-shadow: 1px 1px 10px black;
   align-content: center;
   text-align: center;
   width: 65%;
