--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
   text-align: center;
   padding: 5px;
   background-color: #fff;
-  height: 100%;
 }
 
 header {
@@ -42,6 +41,8 @@ canvas {
   border: 0px;
   padding: 5px;
   margin-left: 20%;
+  position: relative;
+  float: left;
   min-height: 400px;
   display: block;
   width: 75%;
@@ -77,7 +78,7 @@ canvas {
   border-bottom: 20px solid #fff;
 }
 .items{
-  margin: 15px 15px;
+  margin: 30px 30px;
   border: 0px;
   padding: 5px 5px;
   height: 250px;
@@ -87,9 +88,23 @@ canvas {
   background-color: #fff;
   box-shadow: 0px 1px 5px black;
   transition: .8s;
-  
+  position: relative;
+  float: left;
 }
-.items:hover{  box-shadow: 1px 3px 6px black; }
+.events{
+  display: inline-block;
+  height: 50px;
+  border-bottom: 2px solid lightgray;
+  padding: 10px 10px;
+  width: 90%;
+  transition: .8s;
+  cursor: pointer;
+}
+.events:hover{
+  background-color:  #d02532;
+  color: #fff;
+}
+.items:hover{  box-shadow: 1px 3px 6px black; transition: scale(2.0,2.0);}
 
 .btn-red{
   margin-top: 3px;
@@ -99,7 +114,7 @@ canvas {
   padding-bottom: 3px;
   color: #fff;
   border: 0px ; border-radius: 0px;
-  box-shadow: 0px 1px 5px black;
+  box-shadow: 0px 1px 2px black;
   transition: .6s;
   cursor: pointer;
 }
@@ -118,6 +133,7 @@ canvas {
   cursor: pointer;
 }
 .btn-green:hover { background-color: #117a65;  }
+.float-bottom{ position:absolute; bottom: 5px; right: 6px; }
 input {
   margin-bottom: 5px;
 }
@@ -144,10 +160,12 @@ footer{
 }
 
 @media only screen and (max-width: 700px){
-  canvas{
-    width: 80%;
-  }
+  #d0 { margin-left: 0;  width: 95%; }
+  .items{ transition: 0s; width: 80%; }
 }
+/** Code added by gunjan **/
+
+
 .flat-button{
   width:4vw;
   height: 4vw;
@@ -157,10 +175,15 @@ footer{
   border-radius: 5px;
   text-align: center;
   vertical-align: middle;
+  cursor: pointer; /** added by arpanpathak **/
+  box-shadow: 1px 2px 5px 1px black;
   line-height: 4vw;
   display: inline-block;
-
+  transition: .8s;
 }
+/** code added by arpanpathak **/
+.flat-button:hover { background-color: #236978; color: #fff; font-size: 35px; }
+/** end of section **/
 #sidebar{
   width: 23%;
   position: relative;
@@ -184,3 +207,13 @@ footer{
   margin-left: 50%;
   font-size: 20px;
 }
+.attempted{
+  background-color: green;
+}
+.not-attempted{
+  background-color: red;
+}
+.attempt-later{
+  background-color: blue;
+}
+/** end of section **/
