--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,9 @@ footer{
   animation-name: animateIcon;
   animation-duration:2s; 
 }
-
-
 .ques-no { font-size: 38px; text-shadow: 1px 2px 2px black; 
   position: absolute; top: 3px; left: 3px; }
 .timer_container { position: absolute; bottom: 5px; right: 5px; }
-
 @keyframes animateIcon{
   from{color:black;transform: rotate(0deg);}
   to{color: red;transform: rotate(360deg);}
@@ -190,11 +187,7 @@ footer{
   width:4vw;
   height: 4vw;
   content: " ";
-
-
-
   background-color: #fff;
-
   margin:2% 2% 2% 2%;
   border-radius: 5px;
   text-align: center;
@@ -216,17 +209,11 @@ footer{
   background-color: #262626;
   vertical-align: middle;
   
-
-
 }
-
-
-
 .question-view{
   position: relative;
   padding: 10px 10px;
   box-shadow: 1px 1px 10px black;
-
   align-content: center;
   text-align: center;
   width: 65%;
@@ -239,16 +226,19 @@ footer{
   margin-left: 50%;
   font-size: 20px;
 }
-
 .attempted{
   background-color: green;
+  color:white;
 }
 .not-attempted{
   background-color: red;
+  color: white;
 }
 .attempt-later{
   background-color: blue;
+  color: white;
 }
-
-
+.flat-btn-move:hover{
+  box-shadow: 2px 2px 2px 2px black;
+}
 /** end of section **/
