--- a/css/style.css
+++ b/css/style.css
@@ -241,11 +241,11 @@ footer{
   color: white;
 }
 .attempt-later{
-  background-color: blue;
+  background-color: #254ee5;
   color: white;
 }
 .flat-btn-move:hover{
-  box-shadow: 2px 2px 2px 2px black;
+  box-shadow: 1px 2px 10px 1px black;
 }
 #general-button-group{
   position: relative;
@@ -262,6 +262,6 @@ footer{
   margin :10% 15% 10% 22%;
 }
 .reset-button{
-  background-color: aqua;
+  background-color: #FF5733;
 }
 /** end of section **/
