--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
   position: fixed;
   width: 100%;
   height: 12%;
+  top:0px;
   z-index: 50;
   font-family:  Papyrus;
   font-stretch: expanded;
@@ -260,7 +261,7 @@ footer{
   width: 65%;
   margin-left:25%;
   height: inherit;
-  margin-top: 6%;
+  margin-top: 0.5%;
 }
 #general-button-group button{
   margin :10% 15% 10% 22%;
