--- a/css/style.css
+++ b/css/style.css
@@ -270,11 +270,8 @@ footer{
   margin-top: 0.5%;
 }
 #general-button-group button{
-<<<<<<< HEAD
   margin :10% 5% 5% 22%;
-=======
-  margin :2vh 0vw 2vh 6vw;
->>>>>>> 83ec2bcc836125b189b7d897a99fd78a34c05f3b
+
 }
 .reset-button{
   background-color: #ff5722;
@@ -285,3 +282,8 @@ footer{
 
 }
 /** end of section **/
+@media only screen and (max-width: 900px){
+ #sidebar{ z-index: 55; position: relative; float: left;}
+ header{ position: relative; width: 100%; }
+ .question-view{ float: left; }
+}
