--- a/timer/compiled/flipclock.css
+++ b/timer/compiled/flipclock.css
@@ -133,7 +133,7 @@
   z-index: 5;
   width: 100%;
   height: 3px;
-  background-color: #000;
+  background-color: red;
   background-color: rgba(0, 0, 0, 0.4); }
 
 .flip-clock-wrapper ul li a div.down {
