--- a/css/style.css
+++ b/css/style.css
@@ -146,12 +146,10 @@ canvas {
 .btn-green{
   margin-top: 3px;
   background-color:  #16a085 ;
-  padding: 10px 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
+  padding: 10px 20px; padding-bottom: 10px; padding-right: 20px;
   color: #fff;
-  border: 0px ; border-radius: 0px;
-  box-shadow: 0px 1px 2px black;
+  border: 0px ; border-radius: 3px;
+  box-shadow: 0px 1px 8px black;
   transition: .6s;
   cursor: pointer;
 }
@@ -180,11 +178,11 @@ footer{
 .ques-no { font-size: 38px; text-shadow: 1px 2px 2px black; 
   position: absolute; top: 3px; left: 3px; }
 .timer_container { 
-  position: fixed; 
-  top : -25px; 
-  right: 3px; 
-  background-color: transparent;
-  z-index: 999;
+   position: fixed; 
+  bottom: 5px; 
+  left: 6px; 
+  background-color: white;
+  outline:1px solid #262626;
 }
 @keyframes animateIcon{
   from{color:black;transform: rotate(0deg);}
@@ -270,10 +268,9 @@ footer{
   margin-top: 0.5%;
 }
 #general-button-group button{
-  margin :10% 5% 5% 22%;
-
+  margin-left: 10px; margin-right: 10px; width: 177px; 
 }
-#general-button-group button:hover{ box-shadow: 2px 2px 10px 1px black; }
+#general-button-group button:hover{ box-shadow: 0px 2px 10px  black; }
 .reset-button{
   background-color: #ff5722;
 }
@@ -282,8 +279,13 @@ footer{
   text-align: left;
   font-size: 15px;
 }
-.clock{
-  zoom: 0.7;
-    -moz-transform: scale(0.7);
+.modal{
+
 }
 /** end of section **/
+@media only screen and (max-width: 900px){
+  .clock{ zoom: 0.3;
+    -moz-transform: scale(0.3); }
+    header{ position: relative; }
+  #general-button-group button{ width: auto; }
+}
