--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,10 @@ canvas {
 .btn-green{
   margin-top: 3px;
   background-color:  #16a085 ;
-  padding: 10px 20px; padding-bottom: 10px; padding-right: 20px;
+  padding: 10px 50px; padding-bottom: 10px; padding-right: 50px;
   color: #fff;
-  border: 0px ; border-radius: 3px;
-  box-shadow: 0px 1px 8px black;
+  border: 0px ; 
+  box-shadow: 0px 1px 2px black;
   transition: .6s;
   cursor: pointer;
 }
@@ -226,6 +226,7 @@ footer{
   
 }
 .question-view{
+  display: none;
   position: relative;
   padding: 10px 10px;
   box-shadow: 1px 1px 10px black;
@@ -257,6 +258,7 @@ footer{
   box-shadow: 1px 2px 10px 1px black;
 }
 #general-button-group{
+  display: none;
   position: relative;
   padding: 10px 10px;
   box-shadow: 1px 1px 10px black;
@@ -285,7 +287,10 @@ footer{
 /** end of section **/
 @media only screen and (max-width: 900px){
   .clock{ zoom: 0.3;
-    -moz-transform: scale(0.3); }
-    header{ position: relative; }
+    -moz-transform: scale(0.3); margin: 0% 0% 0% 0%;}
+    header{ position: relative; float: left; }
+  #sidebar{ position: relative; float: left; vertical-align: none; width: 100%; height: auto;}
+  .timer_container { position: relative; float: left; width: 100%; }  
   #general-button-group button{ width: auto; }
+  .question-view { float: left; }
 }
