--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ footer{
 .ques-no { font-size: 38px; text-shadow: 1px 2px 2px black; 
   position: absolute; top: 3px; left: 3px; }
 .timer_container { 
-   position: fixed; 
+  position: fixed; 
   bottom: 5px; 
   left: 6px; 
   background-color: white;
@@ -302,8 +302,9 @@ footer{
 }
 /** end of section **/
 @media only screen and (max-width: 900px){
-  .timer_container{ float: left; position: fixed; bottom: 2px; left: 2px; }
+  #sidebar{ float: left; position: relative; width: 100%; height: auto; margin-top: 100px;  }
+  .timer_container{ float: left; position: relative;  width: 100%; margin-top: 0px; height: auto; }
   .clock{ zoom: 0.3;
-    -moz-transform: scale(0.3); margin: 0% 0% 0% 0%;}
+    -moz-transform: scale(0.3); float: left;}
   .question-view { position: relative; float: left; margin-top: 100px; }
 }
